deploy: 2bf8b5b274f343ef33126e8eafbba16a95ddcff9

--- a/_modules/persichetti/fundamentals/quantum_time.html
+++ b/_modules/persichetti/fundamentals/quantum_time.html
@@ -284,25 +284,32 @@
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Duration of one FQMT unit in seconds.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_seconds_per_fqmt</span></div>
 
-    
+
 <div class="viewcode-block" id="TimeContext">
 <a class="viewcode-back" href="../../../persichetti.fundamentals.quantum_time.html#persichetti.fundamentals.quantum_time.TimeContext">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">TimeContext</span><span class="p">:</span>
-    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">base_note</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
-        <span class="k">if</span> <span class="n">base_note</span> <span class="ow">not</span> <span class="ow">in</span> <span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">8</span><span class="p">,</span> <span class="mi">16</span><span class="p">,</span> <span class="mi">32</span><span class="p">,</span> <span class="mi">64</span><span class="p">,</span> <span class="mi">128</span><span class="p">]:</span>
-            <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span><span class="s2">&quot;Use a standard LilyPond duration as base_note (e.g., 4, 8, 16, 32, 64).&quot;</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">base_note</span> <span class="o">=</span> <span class="n">base_note</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">    A container for local temporal information governing motif resolution,</span>
+<span class="sd">    including the base rhythmic unit (quantum of time) and other optional</span>
+<span class="sd">    timing parameters.</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+           
+    <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">base_note</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
+        <span class="c1"># Safely initialize base_note if provided</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_base_note</span> <span class="o">=</span> <span class="n">base_note</span>
+        <span class="c1"># Initialize other optional arguments if needed</span>
+        <span class="c1"># (e.g., self.quantum_unit, self.time_signature, etc.)</span>
+        <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">kwargs</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+            <span class="nb">setattr</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span><span class="p">)</span>
 
     <span class="nd">@property</span>
-    <span class="k">def</span><span class="w"> </span><span class="nf">base_note</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;The base note duration (LilyPond-style) for time representation.&quot;&quot;&quot;</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">base_note</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;The rhythmic base unit used as the quantum of time.&quot;&quot;&quot;</span>
         <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">_base_note</span>
-<span class="w">    </span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Maps quantum durations (quanta) to LilyPond durations using a base note value.</span>
 
-<span class="sd">    .. :noindex:</span>
-<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="nd">@base_note</span><span class="o">.</span><span class="n">setter</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">base_note</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">value</span><span class="p">):</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_base_note</span> <span class="o">=</span> <span class="n">value</span>  
 
 <div class="viewcode-block" id="TimeContext.quanta_to_lilypond">
 <a class="viewcode-back" href="../../../persichetti.fundamentals.quantum_time.html#persichetti.fundamentals.quantum_time.TimeContext.quanta_to_lilypond">[docs]</a>
