--- a/_modules/persichetti/core/texture.html
+++ b/_modules/persichetti/core/texture.html
@@ -76,6 +76,7 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">persichetti.fundamentals.pitch</span><span class="w"> </span><span class="kn">import</span> <span class="n">Pitch</span><span class="p">,</span> <span class="n">PitchClass</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">itertools</span><span class="w"> </span><span class="kn">import</span> <span class="n">combinations</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">collections</span><span class="w"> </span><span class="kn">import</span> <span class="n">Counter</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">math</span>
 
 <div class="viewcode-block" id="ChordTexture">
 <a class="viewcode-back" href="../../../persichetti.core.texture.html#persichetti.core.texture.ChordTexture">[docs]</a>
