--- a/genindex.html
+++ b/genindex.html
@@ -252,10 +252,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="persichetti.fundamentals.resolver.html#persichetti.fundamentals.resolver.get_lilypond_version">get_lilypond_version() (in module persichetti.fundamentals.resolver)</a>
 </li>
-      <li><a href="persichetti.fundamentals.melodic_motif.html#persichetti.fundamentals.melodic_motif.MelodicMotif.get_pitches">get_pitches() (persichetti.fundamentals.melodic_motif.MelodicMotif method)</a>
+      <li><a href="persichetti.fundamentals.melodic_motif.html#persichetti.fundamentals.melodic_motif.MelodicMotif.get_pitch_context">get_pitch_context() (persichetti.fundamentals.melodic_motif.MelodicMotif method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="persichetti.fundamentals.melodic_motif.html#persichetti.fundamentals.melodic_motif.MelodicMotif.get_pitches">get_pitches() (persichetti.fundamentals.melodic_motif.MelodicMotif method)</a>
+</li>
       <li><a href="persichetti.fundamentals.pitch_context.html#persichetti.fundamentals.pitch_context.PitchContext.get_reference">get_reference() (persichetti.fundamentals.pitch_context.PitchContext method)</a>
 </li>
       <li><a href="persichetti.core.scales.html#persichetti.core.scales.ModalTransformer.group_modal_systems_by_scale_type">group_modal_systems_by_scale_type() (persichetti.core.scales.ModalTransformer method)</a>
@@ -430,13 +432,9 @@
 </li>
         <li><a href="persichetti.fundamentals.melodic_motif.html#module-persichetti.fundamentals.melodic_motif">persichetti.fundamentals.melodic_motif</a>
 </li>
-        <li><a href="persichetti.fundamentals.motif_to_pseudocode.html#module-persichetti.fundamentals.motif_to_pseudocode">persichetti.fundamentals.motif_to_pseudocode</a>
-</li>
         <li><a href="persichetti.fundamentals.pitch.html#module-persichetti.fundamentals.pitch">persichetti.fundamentals.pitch</a>
 </li>
         <li><a href="persichetti.fundamentals.pitch_context.html#module-persichetti.fundamentals.pitch_context">persichetti.fundamentals.pitch_context</a>
-</li>
-        <li><a href="persichetti.fundamentals.pseudocode_to_motif.html#module-persichetti.fundamentals.pseudocode_to_motif">persichetti.fundamentals.pseudocode_to_motif</a>
 </li>
         <li><a href="persichetti.fundamentals.quantum_time.html#module-persichetti.fundamentals.quantum_time">persichetti.fundamentals.quantum_time</a>
 </li>
@@ -461,8 +459,6 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="persichetti.fundamentals.motif_to_pseudocode.html#persichetti.fundamentals.motif_to_pseudocode.motif_to_pseudocode">motif_to_pseudocode() (in module persichetti.fundamentals.motif_to_pseudocode)</a>
-</li>
       <li><a href="persichetti.fundamentals.quantum_time.html#persichetti.fundamentals.quantum_time.TimeMapping.musical_to_clock">musical_to_clock() (persichetti.fundamentals.quantum_time.TimeMapping method)</a>
 </li>
       <li><a href="persichetti.fundamentals.quantum_time.html#persichetti.fundamentals.quantum_time.MusicalInertialFrame">MusicalInertialFrame (class in persichetti.fundamentals.quantum_time)</a>
@@ -487,6 +483,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="persichetti.fundamentals.melodic_motif.html#persichetti.fundamentals.melodic_motif.MelodicMotif.normalize">normalize() (persichetti.fundamentals.melodic_motif.MelodicMotif method)</a>
+</li>
       <li><a href="persichetti.fundamentals.event.html#persichetti.fundamentals.event.Note">Note (class in persichetti.fundamentals.event)</a>
 </li>
       <li><a href="persichetti.branches.tuning_systems.equal_temperament.html#persichetti.branches.tuning_systems.equal_temperament.EqualTemperament.note_to_pc">note_to_pc() (persichetti.branches.tuning_systems.equal_temperament.EqualTemperament static method)</a>
@@ -672,6 +670,8 @@
         <li><a href="persichetti.core.resonance.html#module-persichetti.core.resonance">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     persichetti.core.scales
 
@@ -679,8 +679,6 @@
         <li><a href="persichetti.core.scales.html#module-persichetti.core.scales">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     persichetti.core.texture
 
@@ -717,13 +715,6 @@
 </li>
       </ul></li>
       <li>
-    persichetti.fundamentals.motif_to_pseudocode
-
-      <ul>
-        <li><a href="persichetti.fundamentals.motif_to_pseudocode.html#module-persichetti.fundamentals.motif_to_pseudocode">module</a>
-</li>
-      </ul></li>
-      <li>
     persichetti.fundamentals.pitch
 
       <ul>
@@ -735,13 +726,6 @@
 
       <ul>
         <li><a href="persichetti.fundamentals.pitch_context.html#module-persichetti.fundamentals.pitch_context">module</a>
-</li>
-      </ul></li>
-      <li>
-    persichetti.fundamentals.pseudocode_to_motif
-
-      <ul>
-        <li><a href="persichetti.fundamentals.pseudocode_to_motif.html#module-persichetti.fundamentals.pseudocode_to_motif">module</a>
 </li>
       </ul></li>
       <li>
@@ -831,8 +815,6 @@
       <li><a href="persichetti.fundamentals.pitch_context.html#persichetti.fundamentals.pitch_context.PitchContext">PitchContext (class in persichetti.fundamentals.pitch_context)</a>
 </li>
       <li><a href="persichetti.core.tuning.html#persichetti.core.tuning.print_tuning_summary">print_tuning_summary() (in module persichetti.core.tuning)</a>
-</li>
-      <li><a href="persichetti.fundamentals.pseudocode_to_motif.html#persichetti.fundamentals.pseudocode_to_motif.pseudocode_to_motif">pseudocode_to_motif() (in module persichetti.fundamentals.pseudocode_to_motif)</a>
 </li>
       <li><a href="persichetti.branches.tuning_systems.pythagorean.html#persichetti.branches.tuning_systems.pythagorean.PythagoreanTuning">PythagoreanTuning (class in persichetti.branches.tuning_systems.pythagorean)</a>
 </li>
